contrast error fix

--- a/final_project/styles/small.css
+++ b/final_project/styles/small.css
@@ -37,7 +37,7 @@
     background-color:#7389AE;
     height: 50px;
     margin: 0px 10px;
-    color: white;
+    color: black;
 }
 .fonts{
     font-family: 'Lato', 'Open Sans', sans-serif;
